unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Act_Build_Fin_Date__c.field-meta.xml
<CustomField>
    <fullName>Act_Build_Fin_Date__c</fullName>
    <description>The date that the build in M3 finished.</description>
    <inlineHelpText>The date that the build in M3 finished.</inlineHelpText>
    <label>M3 Actual Fin Date</label>
    <type>Date</type>
</CustomField>