unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Act_Build_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Act_Build_Start_Date__c</fullName>
    <description>When the build in M3 started</description>
    <inlineHelpText>When the build in M3 started</inlineHelpText>
    <label>M3 Actual Start Date</label>
    <type>Date</type>
</CustomField>