unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Active_Product__c.field-meta.xml
<CustomField>
    <fullName>Active_Product__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active Product</label>
    <type>Checkbox</type>
</CustomField>