unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Add_to_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Backlog__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Add to Backlog</label>
    <type>Checkbox</type>
</CustomField>