unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Address__c.AddressType__c</field>
            <operation>equals</operation>
            <value>Ship-To</value>
        </filterItems>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Address__c.Account__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>