unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Address_for_RBO__c.field-meta.xml
<CustomField>
    <fullName>Address_for_RBO__c</fullName>
    <formula>IF( ISPICKVAL(SBQQ__Quote__r.SBQQ__DeliveryMethod__c, "Delivery") ,
IF( Address__c = "", "Delivery Address: " &amp; Account__r.ShippingStreet &amp; ", " &amp; 
  Account__r.ShippingCity &amp; ", " &amp;   text( Account__r.ShippingStateCode) &amp; " " &amp;    Account__r.ShippingPostalCode, "Delivery Address: " &amp; Address__r.Street__c &amp; ", " &amp;  Address__r.City__c  &amp; ", " &amp;  TEXT(Address__r.StateProvinceCode__c) &amp; " " &amp;   Address__r.ZipPostalCode__c), "Customer Pickup at Branch")</formula>
    <label>RBO Delivery/Pickup  Address</label>
    <type>Text</type>
</CustomField>