unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/All_Wheel_Drive__c.field-meta.xml
<CustomField>
    <fullName>All_Wheel_Drive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Wheel Drive</label>
    <type>Checkbox</type>
</CustomField>