unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>