unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Assigned_Lockbox__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Lockbox__c</fullName>
    <label>Assigned Lockbox</label>
    <length>100</length>
    <type>Text</type>
</CustomField>