unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Attached_Body2__c.field-meta.xml
<CustomField>
    <fullName>Attached_Body2__c</fullName>
    <formula>SBQQ__Product__r.Attached_Body__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attached Body2</label>
    <type>Text</type>
</CustomField>