unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Attached_Body__c.field-meta.xml
<CustomField>
    <fullName>Attached_Body__c</fullName>
    <label>M3 Attachment Model</label>
    <length>155</length>
    <type>Text</type>
</CustomField>