unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Bed_Body_Make__c.field-meta.xml
<CustomField>
    <fullName>Bed_Body_Make__c</fullName>
    <label>M3 Body Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>