unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Body_Color__c.field-meta.xml
<CustomField>
    <fullName>Body_Color__c</fullName>
    <label>Body Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
                <default>true</default>
                <label>Black</label>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Silver/Grey</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>