unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Body_Length__c.field-meta.xml
<CustomField>
    <fullName>Body_Length__c</fullName>
    <label>Body Length</label>
    <length>50</length>
    <type>Text</type>
</CustomField>