unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Body_SN__c.field-meta.xml
<CustomField>
    <fullName>Body_SN__c</fullName>
    <label>M3 Attachment Model SN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>