unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Body_Warranty_Sent__c.field-meta.xml
<CustomField>
    <fullName>Body_Warranty_Sent__c</fullName>
    <inlineHelpText>Date Body Warranty form was sent to Manufacturer</inlineHelpText>
    <label>Body Warranty Sent</label>
    <type>Date</type>
</CustomField>