unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Bullpen_Date__c.field-meta.xml
<CustomField>
    <fullName>Bullpen_Date__c</fullName>
    <label>Bullpen Date</label>
    <type>Date</type>
</CustomField>