unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Cat_Class__c.field-meta.xml
<CustomField>
    <fullName>Cat_Class__c</fullName>
    <label>Cat/Class</label>
    <length>15</length>
    <type>Text</type>
</CustomField>