unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Change_Order_From_Quote__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_From_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Order From Quote</label>
    <type>Checkbox</type>
</CustomField>