unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Change_Order_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Indicator__c</fullName>
    <formula>IF(ISPICKVAL(Change_Order_Status__c,'Requested') || ISPICKVAL(Change_Order_Status__c,'In Progress'),
IMAGE("/img/samples/flag_red.gif", "",36,36) + " " + "Status:" + " " + TEXT (Change_Order_Status__c),
IF(ISPICKVAL(Change_Order_Status__c,'Completed'),
IMAGE("/img/samples/flag_green.gif", "",36,36) + " " + "Status:" + " " + TEXT (Change_Order_Status__c),
IMAGE("/img/samples/flag_green.gif", "",36,36)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change Order Indicator</label>
    <type>Text</type>
</CustomField>