unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Change_Order_Notes__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Notes__c</fullName>
    <label>Change Order Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>