unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Characteristic_Type__c.field-meta.xml
<CustomField>
    <fullName>Characteristic_Type__c</fullName>
    <label>Characteristic Type</label>
    <length>75</length>
    <type>Text</type>
</CustomField>