unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Chassis_Warranty_Sent__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Warranty_Sent__c</fullName>
    <inlineHelpText>Date Chassis Warranty form was sent to Manufacturer</inlineHelpText>
    <label>Chassis Warranty Sent</label>
    <type>Date</type>
</CustomField>