unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/checkVIN__c.field-meta.xml
<CustomField>
    <fullName>checkVIN__c</fullName>
    <label>checkVIN</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>