unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <length>25</length>
    <type>Text</type>
</CustomField>