unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Complete_Not_Shipped_Reason__c.field-meta.xml
<CustomField>
    <fullName>Complete_Not_Shipped_Reason__c</fullName>
    <label>Complete, Not Shipped Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Customer not ready to accept delivery</fullName>
            </value>
            <value>
                <fullName>Delivery not scheduled</fullName>
            </value>
            <value>
                <fullName>Payment not received</fullName>
            </value>
            <value>
                <fullName>Sale is now rental</fullName>
            </value>
            <value>
                <fullName>Unit is not complete</fullName>
            </value>
            <value>
                <fullName>Warranty/Recall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>