unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Condition2__c.field-meta.xml
<CustomField>
    <fullName>Condition2__c</fullName>
    <label>Condition2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>