unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <formula>IF(ISPICKVAL(SBQQ__Product__r.Condition__c,""),"New", TEXT( SBQQ__Product__r.Condition__c ))</formula>
    <label>Condition</label>
    <type>Text</type>
</CustomField>