unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Custom_Unit_Specification__c.field-meta.xml
<CustomField>
    <fullName>Custom_Unit_Specification__c</fullName>
    <label>Custom Unit Specification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>