unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Customer_Equipment_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Equipment_Number__c</fullName>
    <label>Customer Equipment Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>