unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Customer_Signed_BOL__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed_BOL__c</fullName>
    <label>Customer Signed BOL</label>
    <type>Date</type>
</CustomField>