unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Customer_Unit_N__c.field-meta.xml
<CustomField>
    <fullName>Customer_Unit_N__c</fullName>
    <label>Customer Unit Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>