unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <label>Dealer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>