unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Dealer_Form_Returned__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Form_Returned__c</fullName>
    <label>Dealer Form Returned</label>
    <type>Date</type>
</CustomField>