unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Dealer_Form_Sent__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Form_Sent__c</fullName>
    <label>Dealer Form Sent</label>
    <type>Date</type>
</CustomField>