unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <formula>IF( TEXT(SBQQ__Quote__r.SBQQ__DeliveryMethod__c) = "Delivery" ,
IF( Address__c = "", Account__r.ShippingStreet &amp; ", " &amp; 
IF(Account__r.Shipping_Address_Line2__c = "","",Account__r.Shipping_Address_Line2__c &amp; ", ") &amp; Account__r.ShippingCity &amp; ", " &amp; Account__r.Shipping_State_Code__c &amp; " " &amp; Account__r.ShippingPostalCode , Address__r.Street__c &amp; ", " &amp; IF( Address__r.AddressLine2__c = "","", Address__r.AddressLine2__c &amp; ", ") &amp; Address__r.City__c &amp; ", " &amp; TEXT(Address__r.StateProvinceCode__c) &amp; " " &amp; Address__r.ZipPostalCode__c ) , "Customer Pickup at Branch")</formula>
    <label>Delivery Address</label>
    <type>Text</type>
</CustomField>