unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Delivery_City__c.field-meta.xml
<CustomField>
    <fullName>Delivery_City__c</fullName>
    <label>Delivery City</label>
    <length>75</length>
    <type>Text</type>
</CustomField>