unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Delivery_Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Commit_Date__c</fullName>
    <label>Delivery Commit Date</label>
    <type>Date</type>
</CustomField>