unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Delivery_Contact__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>