unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Delivery_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_Phone__c</fullName>
    <formula>Delivery_Contact__r.Phone</formula>
    <label>Delivery Contact Phone</label>
    <type>Text</type>
</CustomField>