unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <label>Delivered Date</label>
    <type>Date</type>
</CustomField>