unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Delivery_Service__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Service__c</fullName>
    <label>Delivery Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bennett</fullName>
            </value>
            <value>
                <fullName>DeliveryName</fullName>
            </value>
            <value>
                <fullName>Expedited</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Group One</fullName>
            </value>
            <value>
                <fullName>KG Transport</fullName>
            </value>
            <value>
                <fullName>M&amp;L</fullName>
            </value>
            <value>
                <fullName>Midwest</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Spirit Miller</fullName>
            </value>
            <value>
                <fullName>Team Driveaway</fullName>
            </value>
            <value>
                <fullName>Wenture</fullName>
            </value>
            <value>
                <fullName>Premature</fullName>
            </value>
            <value>
                <fullName>Road Runner</fullName>
            </value>
            <value>
                <fullName>ATC</fullName>
            </value>
            <value>
                <fullName>Zip</fullName>
            </value>
            <value>
                <fullName>Venture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>