unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Delivery_Shipping_Notes__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Shipping_Notes__c</fullName>
    <label>Delivery/Shipping Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>