unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Delivery_State__c.field-meta.xml
<CustomField>
    <fullName>Delivery_State__c</fullName>
    <label>Delivery State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>