unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Delivery_Street__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Street__c</fullName>
    <label>Delivery Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>