unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/DeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>DeliveryMethod__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.SBQQ__DeliveryMethod__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DeliveryMethod</label>
    <type>Text</type>
</CustomField>