unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Dimensions__c</fullName>
    <label>Dimensions</label>
    <type>TextArea</type>
</CustomField>