unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Discount_Overage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Overage__c</fullName>
    <formula>SBQQ__Discount__c &gt; Previous_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Overage</label>
    <type>Checkbox</type>
</CustomField>