unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Discount_Required_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discount_Required_Reason__c</fullName>
    <label>Discount Required Reason</label>
    <type>TextArea</type>
</CustomField>