unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Down_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_Received__c</fullName>
    <label>Down Payment Received</label>
    <type>Date</type>
</CustomField>