unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Dynamic_Line_Price__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Line_Price__c</fullName>
    <formula>IF(SBQQ__Quote__r.Display_Add_on_and_Warranty_Price__c,  SBQQ__NetTotal__c, SBQQ__NetTotal__c + Options_without_Warranty_Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dynamic Line Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>