unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Dynamic_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Net_Total__c</fullName>
    <formula>IF(SBQQ__Quote__r.Display_Add_on_and_Warranty_Price__c,  
IF(ISBLANK(SBQQ__ProductOption__c), Total_Package_Price_Freight__c, SBQQ__NetTotal__c),  
IF(AND(ISBLANK(SBQQ__ProductOption__c), NOT(ISPICKVAL(Product_Type__c, 'Warranty'))), Total_Package_Price_Freight__c, SBQQ__NetTotal__c) )</formula>
    <label>Dynamic Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>