unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Dynamic_Pricing_Template__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Pricing_Template__c</fullName>
    <formula>IF( 
AND(!SBQQ__Quote__r.Display_Add_on_and_Warranty_Price__c, 
Item_Number__c  &lt;&gt;  '750_00340',
Item_Number__c  &lt;&gt;  '750_00050'), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dynamic Pricing Template</label>
    <type>Checkbox</type>
</CustomField>