unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Ext_Description_Formula__c.field-meta.xml
<CustomField>
    <fullName>Ext_Description_Formula__c</fullName>
    <formula>IF(SBQQ__RequiredBy__c = "",
"Body Length: " &amp; Body_Length__c &amp;
BR() &amp;
"Floor Thickness &amp; Material: " &amp; Floor_Thickness_Material__c &amp;
BR() &amp;
"Side Information: " &amp; TEXT(Side_Height__c) &amp; "High with " &amp;Side_Material__c &amp; " " &amp; TEXT(Side_Thickness__c) &amp; " Thickness" &amp;
BR() &amp;
"High Lift Tailgate" &amp;
BR() &amp;
"Transmission: " &amp; TEXT(Transmission__c) &amp;
BR() &amp;
"Paint Color: " &amp; TEXT(Body_Color__c ), "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ext Description Formula</label>
    <type>Text</type>
</CustomField>