unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Extended_Description__c.field-meta.xml
<CustomField>
    <fullName>Extended_Description__c</fullName>
    <label>Extended Description</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>