unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <description>Sales Rep Facility</description>
    <formula>TEXT(SBQQ__Quote__r.SBQQ__SalesRep__r.Facility__c)</formula>
    <label>Facility</label>
    <type>Text</type>
</CustomField>