unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>