unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/FedEx_Tracking__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Tracking__c</fullName>
    <label>FedEx Tracking</label>
    <length>50</length>
    <type>Text</type>
</CustomField>