unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Floor_Thickness_Material__c.field-meta.xml
<CustomField>
    <fullName>Floor_Thickness_Material__c</fullName>
    <label>Floor Thickness &amp; Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>