unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Forecast_Region__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Region__c</fullName>
    <formula>IF(AND(SBQQ__Quote__r.SBQQ__SalesRep__r.Manager.UserRole.Name = "President/Exec/Mktg",CONTAINS(SBQQ__Quote__r.SBQQ__SalesRep__r.UserRole.Name, "SR ")),"National", SBQQ__Quote__r.SBQQ__SalesRep__r.UserRole.Name)</formula>
    <label>Forecast Region</label>
    <type>Text</type>
</CustomField>