unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/formula_LStatus_Def__c.field-meta.xml
<CustomField>
    <fullName>formula_LStatus_Def__c</fullName>
    <formula>IF( M3_CO_Low_Status__c = "10", "10-Preliminary",IF( M3_CO_Low_Status__c = "20", "20-No Order Lines",IF( M3_CO_Low_Status__c = "22", "22-Reserved",IF( M3_CO_Low_Status__c = "33", "33-Allocated",IF( M3_CO_Low_Status__c = "44", "44-Pickling List",IF( M3_CO_Low_Status__c = "66", "66-Delivered",IF( M3_CO_Low_Status__c = "77", "77-Invoiced",IF( M3_CO_Low_Status__c = "90", "90-Deleted", M3_CO_Low_Status__c))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CO Low Status</label>
    <type>Text</type>
</CustomField>