unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Freight_PO_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Freight_PO_Order_Date__c</fullName>
    <description>Data comes from Freight App via API</description>
    <label>Freight PO Order Date</label>
    <type>Date</type>
</CustomField>