unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/FreightPO__c.field-meta.xml
<CustomField>
    <fullName>FreightPO__c</fullName>
    <description>Data comes from Freight  App via API</description>
    <label>FreightPO</label>
    <length>15</length>
    <type>Text</type>
</CustomField>