unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Full_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Full ID</label>
    <type>Text</type>
</CustomField>