unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Inside_Sales_User__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_User__c</fullName>
    <formula>OR(
CONTAINS($Profile.Name, 'Inside Sales'),
CONTAINS($Profile.Name, 'Sales Manager'),
CONTAINS($Profile.Name, 'Executive'),
CONTAINS($Profile.Name, 'System Administrator')
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inside Sales User</label>
    <type>Checkbox</type>
</CustomField>