unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Installation_Included__c.field-meta.xml
<CustomField>
    <fullName>Installation_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation Included</label>
    <type>Checkbox</type>
</CustomField>