unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>