unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Invoice_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payment_Date__c</fullName>
    <label>Invoice Payment Date</label>
    <type>Date</type>
</CustomField>