unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Invoice_Requested__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Requested__c</fullName>
    <label>Invoice Requested</label>
    <type>Date</type>
</CustomField>