unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Invoicing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Instructions__c</fullName>
    <label>Invoicing Instructions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>