unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <description>M3 Item Number</description>
    <label>Item Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>