unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Item_Number_RBO__c.field-meta.xml
<CustomField>
    <fullName>Item_Number_RBO__c</fullName>
    <formula>IF(SBQQ__ProductName__c = 'Option/Add-on', 'Custom Add-On',  IF(NOT(ISBLANK(Item_Number__c)), Item_Number__c, ''))</formula>
    <label>Item Number RBO</label>
    <type>Text</type>
</CustomField>