unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Lien_Holder__c.field-meta.xml
<CustomField>
    <fullName>Lien_Holder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lienholder</label>
    <type>Checkbox</type>
</CustomField>