unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Lien_Info_Received__c.field-meta.xml
<CustomField>
    <fullName>Lien_Info_Received__c</fullName>
    <label>Lien Info Received</label>
    <type>Date</type>
</CustomField>