unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Line_Description_RBO__c.field-meta.xml
<CustomField>
    <fullName>Line_Description_RBO__c</fullName>
    <formula>IF( CONTAINS( Line_Description__c , '"') ,  SUBSTITUTE(Line_Description__c , '"', "''")  , Line_Description__c )</formula>
    <label>Line Description RBO</label>
    <type>Text</type>
</CustomField>