unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Lockbox_Combination__c.field-meta.xml
<CustomField>
    <fullName>Lockbox_Combination__c</fullName>
    <label>Lockbox Combination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>