unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <label>Lot</label>
    <length>50</length>
    <type>Text</type>
</CustomField>