unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/M3_CO_High_Status__c.field-meta.xml
<CustomField>
    <fullName>M3_CO_High_Status__c</fullName>
    <description>M3 CO High Status</description>
    <inlineHelpText>90-Deleted
77-Invoiced
66-Delivered
44-Picking List
33-Allocated
22-Reserved
20-No Order Lines
10-Preliminary</inlineHelpText>
    <label>M3 CO High Status</label>
    <length>5</length>
    <type>Text</type>
</CustomField>