unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/M3_CON__c.field-meta.xml
<CustomField>
    <fullName>M3_CON__c</fullName>
    <label>M3 Customer Order Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>