unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/M3_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>M3_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>M3 Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote_Lines3</relationshipName>
    <type>Lookup</type>
</CustomField>