unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/M3_Coordinator_Email__c.field-meta.xml
<CustomField>
    <fullName>M3_Coordinator_Email__c</fullName>
    <label>M3 Coordinator Email</label>
    <type>Email</type>
</CustomField>