unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/M3_Notes__c.field-meta.xml
<CustomField>
    <fullName>M3_Notes__c</fullName>
    <label>M3 Notes</label>
    <type>TextArea</type>
</CustomField>