unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/M3_Slot_Count__c.field-meta.xml
<CustomField>
    <fullName>M3_Slot_Count__c</fullName>
    <label>M3 Slot Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>